--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#1a1a2e">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Stonefire">
     <link rel="apple-touch-icon" href="/assets/icons/triassic.svg">
     <!-- PostHog Analytics -->
